--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@types/react-native-vector-icons": "^4.4.2",
 		"@types/uuid": "^3.4.0",
 		"mobx": "^3.2.2",
 		"mobx-react": "^4.2.2",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.1",
+		"react-native-device-info": "^0.12.1",
 		"react-native-swipeout": "adrianhall/react-native-swipeout#types",
+		"react-native-vector-icons": "^4.4.2",
 		"uuid": "^3.1.0"
 	},
 	"devDependencies": {
